--- a/BlackOutGobelins/en.lproj/Localizable.strings
+++ b/BlackOutGobelins/en.lproj/Localizable.strings
@@ -15,3 +15,5 @@
 "DATA_TYPE_USER_NAME" = "Your name";
 
 "DATA_TYPE_LOCATION" = "Where you live";
+
+"PREHOME_TEXT" = "Blackout is an adventure game in which you can explore you Facebook network and rediscover your online portrait in a unique way. \n \n To find you e-Go and start the adventure, you will have to link your Facebook account to the game. \n \n Your datas are secured and won't be used by Blackout or any third party entities. You can read the authorization granted to Blackout at any moment into the game settings. \n \n More informations at www.blackout-lejeu.fr";
