--- a/BlackOutGobelins/fr.lproj/Localizable.strings
+++ b/BlackOutGobelins/fr.lproj/Localizable.strings
@@ -16,4 +16,10 @@
 
 "DATA_TYPE_LOCATION" = "Là où tu vis";
 
-"PREHOME_TEXT" = "Blackout est un jeu d’aventure vous permettant d’explorer votre réseau Facebook et de redécouvrir votre image en ligne de manière inédite. \n \n Pour retrouver votre e-Go et prendre part à l’aventure, vous devez lier votre compte Facebook au jeu. \n \n Vos données sont sécurisées et ne pourront être utilisées par Blackout ou tout autre éditeur tierce à des fins personnelles. Vous pouvez prendre connaissance des autorisations accordées à Blackout à chaque instant depuis les options du jeu. \n \n Retrouvez plus d’informations sur www.blackout-lejeu.fr";
+"PREHOME_TEXT" = "Blackout est un jeu d’aventure vous permettant d’explorer votre réseau Facebook et de redécouvrir votre image en ligne de manière inédite. \n \n Pour retrouver votre e-Go et prendre part à l’aventure, vous devez lier votre compte Facebook au jeu. \n \n Vos données ne pourront être utilisées par Blackout ou tout autre éditeur tierce. Vous pouvez prendre connaissance des autorisations accordées à Blackout à chaque instant depuis les options du jeu. \n \n Retrouvez plus d’informations sur www.blackout-lejeu.fr";
+
+"USER_COMEBACK" = "Salut {username}! C'est génial de te revoir !";
+
+"FACEBOOK_DATA_LOADING" = "Nous traitons vos données, \nil y en a beaucoup !";
+
+"BUTTON_LOGIN" = "Commencer l'aventure";
