huge commit of the day

--- a/BlackOutGobelins/en.lproj/Localizable.strings
+++ b/BlackOutGobelins/en.lproj/Localizable.strings
@@ -23,3 +23,5 @@
 "FACEBOOK_DATA_LOADING" = "We are processing your data, \nthere are many of them!";
 
 "BUTTON_LOGIN" = "Start the adventure";
+
+"CLUE_DOOR" = "What have you got to say \nabout yourself?";
