--- a/BlackOutGobelins/fr.lproj/Localizable.strings
+++ b/BlackOutGobelins/fr.lproj/Localizable.strings
@@ -23,3 +23,5 @@
 "FACEBOOK_DATA_LOADING" = "Nous traitons vos données, \nil y en a beaucoup !";
 
 "BUTTON_LOGIN" = "Commencer l'aventure";
+
+"CLUE_DOOR" = "Qu’avez-vous à dire \nà propos de vous ?";
