--- a/BlackOutGobelins/fr.lproj/Localizable.strings
+++ b/BlackOutGobelins/fr.lproj/Localizable.strings
@@ -16,6 +16,10 @@
 
 "DATA_TYPE_LOCATION" = "Là où tu vis";
 
+"BEST_FRIEND_NAME" = "Nom du meilleur ami";
+
+"GREAT_BUDDY_NAME" = "Nom d'un ami proche";
+
 "PREHOME_TEXT" = "Blackout est un jeu d’aventure vous permettant d’explorer votre réseau Facebook et de redécouvrir votre image en ligne de manière inédite. \n \n Pour retrouver votre e-Go et prendre part à l’aventure, vous devez lier votre compte Facebook au jeu. \n \n Vos données ne pourront être utilisées par Blackout ou tout autre éditeur tierce. Vous pouvez prendre connaissance des autorisations accordées à Blackout à chaque instant depuis les options du jeu. \n \n Retrouvez plus d’informations sur www.blackout-lejeu.fr";
 
 "USER_COMEBACK" = "Salut {username}! C'est génial de te revoir !";
@@ -31,3 +35,35 @@
 "CLUE_AGE" = "ans";
 
 "PROTECTED" = "donnée protégée";
+
+"TIP_1" = "Vous voulez être le seul à voir certaines publications ? Pensez aux paramètres de confidentialité. (image “moi uniquement”)";
+
+"TIP_2" = "Le Social Graph Search vous permet de faire des recherches parmi les données auxquelles vous avez accès. Faites en bonne usage.";
+
+"TIP_3" = "Envie de connaître vos points communs et de voir vos liens avec un ami ? Pensez à la fonction “Liens d’amitié”.";
+
+"AGE_20" = "Tu passes beaucoup de temps sur Facebook, tu ne devrais pas être en cours ?";
+
+"AGE_25" = "Toujours à l’école ? Tu devrais pas travailler à ton âge ?";
+
+"AGE_30" = "Tu as autant d’amis que ça dans la vraie vie ? Tu sors beaucoup dis donc.";
+
+"AGE_40" = "Il parait que le travail c’est la santé... Et tu es toujours là sur Facebook ?";
+
+"AGE_40_PLUS" = "C’est rare de rencontrer un e-Go aussi vieux par ici.";
+
+"CITY_1" = "Tu as toujours vécu à {cityname}, tu ne voudrais pas voir ailleurs.";
+
+"CITY_2" = "{cityname}, ça ne me dit rien. Il y a beaucoup d’habitants ?";
+
+"LOVE_SITUATION" = "Petit cachotier";
+
+"WORK" = "Il paraît que le travail c’est la santé... \nMouais.";
+
+"JOB_POSITION" = "Ton travail";
+
+"COMPANY_NAME" = "Ton entreprise actuelle";
+
+"EDUCATION" = "Tes études";
+
+"A_FRIEND_NAME" = "Un de tes ami";
