--- a/BlackOutGobelins/fr.lproj/Localizable.strings
+++ b/BlackOutGobelins/fr.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 
 "CHARACTER_DIALOGUE_BESTFRIEND" = "Je suis content qu’on ai pu rentrer en contact, je commençais à me lasser d’avoir pour seul ami un Bot détraqué... Il m’a bien aidé en tout cas, tu devrais aller le voir avant qu’il y passe.";
 
-"CHARACTER_DIALOGUE_FRIEND_ON_PICTURE" = "Wow. T’es salement amoché(e) toi ! Tu me dis quelque chose mais pas facile de t’identifier. Tu aurais pas une photo au moins ?";
+"CHARACTER_DIALOGUE_FRIEND_ON_PICTURE" = "Wow. T’es salement amoché toi ! Tu me dis quelque chose mais pas facile de t’identifier. Tu aurais pas une photo au moins ?";
 
 "DATA_TYPE_USER_NAME" = "Ton nom";
 
@@ -36,11 +36,11 @@
 
 "PROTECTED" = "donnée protégée";
 
-"TIP_1" = "Vous voulez être le seul à voir certaines publications ? Pensez aux paramètres de confidentialité. (image “moi uniquement”)";
+"TIP_1" = "Vous voulez être le seul à voir certaines publications ? \nPensez aux paramètres de confidentialité. \n(image “moi uniquement”)";
 
 "TIP_2" = "Le Social Graph Search vous permet de faire des recherches parmi les données auxquelles vous avez accès. Faites en bonne usage.";
 
-"TIP_3" = "Envie de connaître vos points communs et de voir vos liens avec un ami ? Pensez à la fonction “Liens d’amitié”.";
+"TIP_3" = "Envie de connaître vos points communs et de voir vos liens avec un ami ? \nPensez à la fonction “Liens d’amitié”.";
 
 "AGE_20" = "Tu passes beaucoup de temps sur Facebook, tu ne devrais pas être en cours ?";
 
