--- a/BlackOutGobelins/en.lproj/Localizable.strings
+++ b/BlackOutGobelins/en.lproj/Localizable.strings
@@ -16,9 +16,9 @@
 
 "DATA_TYPE_LOCATION" = "Where you live";
 
-"BEST_FRIEND_NAME" = "Best friend name";
+"BEST_FRIEND_NAME" = "Best friend";
 
-"GREAT_BUDDY_NAME" = "Great buddy name";
+"GREAT_BUDDY_NAME" = "Great buddy";
 
 "PREHOME_TEXT" = "Blackout is an adventure game in which you can explore you Facebook network and rediscover your online portrait in a unique way. \n \n To find you e-Go and start the adventure, you will have to link your Facebook account to the game. \n \n Your data won't be used by Blackout or any other third party entities. You can read the authorization granted to Blackout at any moment into the game settings. \n \n More informations at www.blackout-lejeu.fr";
 
@@ -42,21 +42,21 @@
 
 "TIP_3" = "Envie de connaître vos points communs et de voir vos liens avec un ami ? \nPensez à la fonction “Liens d’amitié”.";
 
-"AGE_20" = "Tu passes beaucoup de temps sur Facebook, tu ne devrais pas être en cours ?";
+"AGE_20" = "Donnée âge : \nTu passes beaucoup de temps sur Facebook, tu ne devrais pas être en cours ?";
 
-"AGE_25" = "Toujours à l’école ? Tu devrais pas travailler à ton âge ?";
+"AGE_25" = "Donnée âge : \nToujours à l’école ? Tu devrais pas travailler à ton âge ?";
 
-"AGE_30" = "Tu as autant d’amis que ça dans la vraie vie ? Tu sors beaucoup dis donc.";
+"AGE_30" = "Donnée âge : \nTu as autant d’amis que ça dans la vraie vie ? Tu sors beaucoup dis donc.";
 
-"AGE_40" = "Il parait que le travail c’est la santé... Et tu es toujours là sur Facebook ?";
+"AGE_40" = "Donnée âge : \nIl parait que le travail c’est la santé... Et tu es toujours là sur Facebook ?";
 
-"AGE_40_PLUS" = "C’est rare de rencontrer un e-Go aussi vieux par ici.";
+"AGE_40_PLUS" = "Donnée âge : \nC’est rare de rencontrer un e-Go aussi vieux par ici.";
 
-"CITY_1" = "Tu as toujours vécu à {cityname}, tu ne voudrais pas voir ailleurs.";
+"CITY_1" = "Donnée lieu d'habitation : \nTu as toujours vécu à {cityname}, tu ne voudrais pas voir ailleurs.";
 
-"CITY_2" = "{cityname}, ça ne me dit rien. Il y a beaucoup d’habitants ?";
+"CITY_2" = "Donnée lieu d'habitation : \n{cityname}, ça ne me dit rien. Il y a beaucoup d’habitants ?";
 
-"LOVE_SITUATION" = "Petit cachotier";
+"LOVE_SITUATION" = "Donnée situation amoureuse : \nPetit cachotier";
 
 "WORK" = "Il paraît que le travail c’est la santé... \nMouais.";
 
@@ -66,4 +66,4 @@
 
 "EDUCATION" = "Your education";
 
-"A_FRIEND_NAME" = "One of your friend";
+"A_FRIEND_NAME" = "A friend";
